KVH/mykvh/Email-to-anything/objects/Recent_Item_Regex_Group_Field__c.object
<CustomObject>
    <fields>
        <fullName>Free_text__c</fullName>
        <label>Free text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free text</fullName>
                </value>
                <value>
                    <fullName>any character</fullName>
                </value>
                <value>
                    <fullName>any letter a-z</fullName>
                </value>
                <value>
                    <fullName>any lowercase letter a-z</fullName>
                </value>
                <value>
                    <fullName>any uppercase letter A-Z</fullName>
                </value>
                <value>
                    <fullName>any digit 0-9</fullName>
                </value>
                <value>
                    <fullName>any ASCII word character</fullName>
                </value>
                <value>
                    <fullName>any whitespace</fullName>
                </value>
                <value>
                    <fullName>any word boundary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Item_Regex_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recent Item Regex Group</label>
        <referenceTo>Recent_Item_Regex_Group__c</referenceTo>
        <relationshipLabel>Recent Item Regex Group Fields</relationshipLabel>
        <relationshipName>Recent_Item_Regex_Group_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recent Item Regex Group Field</label>
    <nameField>
        <label>Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Item Regex Group Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>